@@ -1,4 +1,4 @@
-f%d <?php
+<?php
 /*
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2008 Bharat Mediratta
